<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_assignment_black_48dp"
            android:title="@string/note" />
        <item
            android:id="@+id/nav_clock"
            android:icon="@drawable/ic_clock_black_48dp"
            android:title="@string/clock1" />
        <item
            android:id="@+id/nav_frends"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/record" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/set" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_setting"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_background"
            android:icon="@drawable/ic_setting"
            android:title="@string/background"/>
    </group>

</menu>
